# my_minesweeper

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  pytest-ci.yml
app/: app.py
src/my_minesweeper/: minesweeper.py
tests/: test_minesweeper.py
